===============================================================================
geometry-1.7.0   Release Date: 2012-XX-XX  Release Manager: Juan Pablo Carbajal
===============================================================================

** Added Functions

   box3dVolume   cart2cyl   circle3dPoint   cyl2cart
   drawCircle3d   drawPoint3d   createScaling3d   drawCube
   createCube drawSphericalTriangle

===============================================================================
geometry-1.6.0   Release Date: 2012-10-12  Release Manager: Juan Pablo Carbajal
===============================================================================
** geometry doesn't autoloads anymore

** Added Functions

  anglePoints3d   angles3d   boxes3d   geom3d_Contents
  lines3d   planes3d   points3d   polygons3d   vectors3d
  graphs_Contents   meshes3d_Contents   angleSort3d   createPlane
  intersectLinePlane   normalizePlane   planeNormal   planePosition
  projPointOnPlane   sph2cart2   vectorAngle3d   distancePointLine3d
  cart2sph2d   createRotationOx   createRotationOy   createRotationOz
  createTranslation3d   drawAxis3d   drawCylinder   drawSphere
  polygonArea3d   transformPoint3d   drawBox3d   drawEdge3d   drawMesh
  createCubeOctahedron   boundingBox3d   cart2sph2   circle3dOrigin
  circle3dPosition   drawCircleArc3d   drawPolygon3d   drawSphericalEdge
  drawSphericalPolygon   intersectPlaneSphere   sph2cart2d

** Updated functions
  distancePoints

** Bug Fixes:
  - drawArrow  was not working due to porting errors.

===============================================================================
geometry-1.5.0   Release Date: 2012-06-05  Release Manager: Juan Pablo Carbajal
===============================================================================

* Added functions:
 - cov2ellipse  & ellipse2cov: transform between ellipses and covariances matrices.

 - beltproblem  : Finds the four lines tangent to two circles with given centers and