@@ -2,16 +2,16 @@
 ## Copyright (C) 2004-2011 INRA - CEPIA Nantes - MIAJ (Jouy-en-Josas)
 ## Copyright (C) 2012 Adapted to Octave by Juan Pablo Carbajal <carbajal@ifi.uzh.ch>
 ## All rights reserved.
-## 
+##
 ## Redistribution and use in source and binary forms, with or without
 ## modification, are permitted provided that the following conditions are met:
-## 
+##
 ##     1 Redistributions of source code must retain the above copyright notice,
 ##       this list of conditions and the following disclaimer.
 ##     2 Redistributions in binary form must reproduce the above copyright
 ##       notice, this list of conditions and the following disclaimer in the
 ##       documentation and/or other materials provided with the distribution.
-## 
+##
 ## THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS ''AS IS''
 ## AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 ## IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
@@ -23,27 +23,37 @@
 ## OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 ## OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-function spheres(varargin)
-#SPHERES Description of functions operating on 3D spheres
-#
-#   Spheres are represented by their center and their radius:
-#   S = [xc yc zc r];
-#
-#   An ellipsoid is defined by:
-#   ELL = [XC YC ZC A B C PHI THETA PSI]
-#   where [XC YC ZY] is the center, [A B C] are length of semi-axes (in
-#   decreasing order), and [PHI THETA PSI] are euler angles representing
-#   the ellipsoid orientation.
-#
-#   See also
-#   createSphere, inertiaEllipsoid
-#   intersectLineSphere, intersectPlaneSphere, sphericalVoronoiDomain
-#   drawSphere, drawEllipsoid
-#   drawSphericalEdge, drawSphericalTriangle, drawSphericalPolygon
-#   fillSphericalTriangle, fillSphericalPolygon
-#
-# ------
-# Author: David Legland
-# e-mail: david.legland@grignon.inra.fr
-# Created: 2008-10-13,    using Matlab 7.4.0.287 (R2007a)
-# Copyright 2008 INRA - BIA PV Nantes - MIAJ Jouy-en-Josas.
+## -*- texinfo -*-
+## @deftypefn {Function File} {@var{h} =} function_name (@var{pos}, @var{vect})
+## Draw vector at a given position
+##
+##   Example
+## @example
+##     figure; hold on;
+##     drawVector3d([2 3 4], [1 0 0]);
+##     drawVector3d([2 3 4], [0 1 0]);
+##     drawVector3d([2 3 4], [0 0 1]);
+##     view(3);
+## @end example
+##
+## @seealso{quiver3}
+## @end deftypefn
+
+function varargout = drawVector3d(pos, vect, varargin)
+
+  h = quiver3 (pos(:, 1), pos(:, 2), pos(:, 3), ...
+      vect(:, 1), vect(:, 2), vect(:, 3), varargin{:});
+
+  # format output
+  if nargout > 0
+      varargout{1} = h;
+  end
+
+endfunction
+
+%!demo
+%!     figure; hold on;
+%!     drawVector3d([2 3 4], [1 0 0]);
+%!     drawVector3d([2 3 4], [0 1 0]);
+%!     drawVector3d([2 3 4], [0 0 1]);
+%!     view(3);
