@@ -23,31 +23,26 @@
 ## OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 ## OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-function varargout = drawVector3d(pos, vect, varargin)
-#DRAWVECTOR3D Draw vector at a given position
-#
-#   drawVector3d(POS, VECT)
-#
-#   Example
-#     figure; hold on;
-#     drawVector3d([2 3 4], [1 0 0]);
-#     drawVector3d([2 3 4], [0 1 0]);
-#     drawVector3d([2 3 4], [0 0 1]);
-#     view(3);
-#
-#   See also
-#   quiver3
-#
-# ------
-# Author: David Legland
-# e-mail: david.legland@grignon.inra.fr
-# Created: 2011-12-19,    using Matlab 7.9.0.529 (R2009b)
-# Copyright 2011 INRA - Cepia Software Platform.
+## -*- texinfo -*-
+## @deftypefn {Function File} {} spheres ()
+## Description of functions operating on 3D spheres
+##
+##   Spheres are represented by their center and their radius:
+##   S = [xc yc zc r];
+##
+##   An ellipsoid is defined by:
+##   ELL = [XC YC ZC A B C PHI THETA PSI]
+##   where [XC YC ZY] is the center, [A B C] are length of semi-axes (in
+##   decreasing order), and [PHI THETA PSI] are euler angles representing
+##   the ellipsoid orientation.
+## @seealso{createSphere, inertiaEllipsoid, intersectLineSphere,
+## intersectPlaneSphere, sphericalVoronoiDomain, drawSphere, drawEllipsoid,
+## drawSphericalEdge, drawSphericalTriangle, drawSphericalPolygon,
+## fillSphericalTriangle, fillSphericalPolygon}
+## @end deftypefn
 
-h = quiver3(pos(:, 1), pos(:, 2), pos(:, 3), ...
-    vect(:, 1), vect(:, 2), vect(:, 3), varargin{:});
+function spheres(varargin)
 
-# format output
-if nargout > 0
-    varargout{1} = h;
-end
+  help spheres
+
+endfunction
